--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -65,13 +65,14 @@ decoration {
 
     rounding = 2
 
-    # active_opacity = 0.95
-    # inactive_opacity = 0.95
+    active_opacity = 0.9
+    inactive_opacity = 0.9
 
-    blur = yes
-    blur_size = 10
-    blur_passes = 1
-    blur_new_optimizations = on
+    blur {
+        enabled = true
+        size = 10
+        passes = 1
+    }
 
     drop_shadow = yes
     shadow_range = 4
@@ -96,8 +97,8 @@ animations {
 
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = true # you probably want this
 }
 
 master {
@@ -107,7 +108,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    workspace_swipe = false
 }
 
 # Example per-device config
