--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -34,7 +34,7 @@ Color
 #NoProgressBar
 CheckSpace
 VerbosePkgLists
-ParallelDownloads = 8
+ParallelDownloads = 9
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -117,3 +117,6 @@ Include = /etc/pacman.d/mirrorlist.arch4edu
 #Server = http://repo.archlinuxcn.org/$arch
 ## or install archlinuxcn-mirrorlist-git and use the mirrorlist
 Include = /etc/pacman.d/archlinuxcn-mirrorlist
+
+[chaotic-aur]
+Include = /etc/pacman.d/chaotic-mirrorlist
